# logi

./: .gitignore  CMakeLists.txt  README.md  boilerplate  mkycmflags
extras/: logi-to-other  logi-to-vdr
scripts/: fslcns
src/: CMakeLists.txt  frontend.cpp  frontend.h  receiver.cpp  receiver.h  section-filter.cpp  section-filter.h  tuning.cpp  tuning.h
src/db/: CMakeLists.txt  logi-db.cpp  logi-db.h  logi-sqlite.cpp  logi-sqlite.h
src/scan/: CMakeLists.txt  README.txt  channel-scanner.cpp  channel-scanner.h  dvbt-tuning-iterator.cpp  dvbt-tuning-iterator.h  freesat-channel-scanner.cpp  freesat-channel-scanner.h  freesat-lcn-processor.cpp  freesat-lcn-processor.h  freesat-tuning-iterator.cpp  freesat-tuning-iterator.h  freeview-channel-scanner.cpp  freeview-channel-scanner.h  freeview-lcn-processor.cpp  freeview-lcn-processor.h  lcn-processor.cpp  lcn-processor.h  multi-scanner.cpp  multi-scanner.h  nit-processor.cpp  nit-processor.h  scan-data.h  sdt-processor.cpp  sdt-processor.h  single-channel-scanner.cpp  single-channel-scanner.h  standard-channel-scanner.cpp  standard-channel-scanner.h  tuning-iterator.h
src/si/: README.txt  decode-string.cpp  decode-string.h  delsys-descriptor.cpp  delsys-descriptor.h  descriptor.h  huff2c.py  huffman.cpp  huffman.h  network-name-descriptor.h  nit-section.cpp  nit-section.h  sat-delsys-descriptor.cpp  sat-delsys-descriptor.h  sdt-section.cpp  sdt-section.h  section-data.cpp  section-data.h  section.cpp  section.h  service-descriptor.h  service-list-descriptor.cpp  service-list-descriptor.h  t2-delsys-descriptor.h  table-tracker.cpp  table-tracker.h  terr-delsys-descriptor.cpp  terr-delsys-descriptor.h  ts-data.h
src/udev/: CMakeLists.txt  README.txt  udev-client.cpp  udev-client.h  udev-device.cpp  udev-device.h
tests/: CMakeLists.txt  frontends.cpp  fsscan.cpp  fvscan.cpp  tune.cpp
